--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Untitled Document</title>
+<title>First Git File</title>
 </head>
 
 <body>
+	<h1>Hello World</h1>
 </body>
 </html>
